--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
+mugshot: "/assets/images/layout/ndfc_mugshot.jpg"
 twitter_username: releasethegecko
 github_username:  ndfcampbell
 
