Added thumbnail generating script and the thumbnails.

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -21,7 +21,7 @@ papers:
     authors: "Tobias Bertel, Neill D. F. Campbell and Christian Richardt"
     venue: "IEEE Transactions on Visualization and Computer Graphics, vol. 25, no. 5"
     year: 2019
-    id: ""
+    id: "tvcg19_megaparallax"
 
   - title: "Gaussian Process Latent Variable Alignment Learning"
     authors: "Ieva Kazlauskaite, Carl Henrik Ek and Neill D. F. Campbell"
