Added sparse version of the header without image.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,8 @@
 pages:
   - title: Home
     url: /
-  - title: About
-    url: /about/
+  - title: Group
+    url: /group/
   - title: Research
     url: /research/
   - title: Publications
