--- a/_config.yml
+++ b/_config.yml
@@ -13,18 +13,18 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Neill Campbell
-brand: Neill&thinsp;D&thinsp;F&thinsp;Campbell
-email: n.campbell@bath.ac.uk
+title: Centre for Mathematics and Algorithms for Data at the University of Bath
+brand: MAD
+email: TODO@bath.ac.uk # mad-centre@bath.ac.uk.fillthisin
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Interdisciplinary Research Centre `Mathematics and Algorithms for Data' 
+  studying the theoretical underpinning of Data Science by researchers from 
+  the Departments of Mathematics and Computer Science at the University of Bath.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-mugshot: "/assets/images/layout/ndfc_mugshot.jpg"
-twitter_username: releasethegecko
-github_username:  ndfcampbell
+mugshot: "/assets/images/layout/wordcloud_trans.png"
+twitter_username: TODO
+github_username:  TODO
 
 # Build settings
 markdown: kramdown
