Working on people page.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,8 @@
 pages:
   - title: Home
     url: /
-  - title: Group
-    url: /group/
+  - title: People
+    url: /people/
   - title: Research
     url: /research/
   - title: Publications
