Added seminars as well.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,7 +3,7 @@ pages:
     url: /
   - title: People
     url: /people/
-  - title: Research
-    url: /research/
+  - title: Seminars
+    url: /seminars/
   - title: Publications
     url: /publications/
