--- a/_data/people.yml
+++ b/_data/people.yml
@@ -83,3 +83,71 @@ faculty:
     url: "https://people.bath.ac.uk/trs35/"
     name:  "Theresa Smith"
     topics: "Spatial statistics, Bayesian computing, health applications"
+
+researchers:
+  - name: "Eleanor Barry"
+    working: "Jonathan Bartlett"
+  - name: "Emelie Barman"
+    working: "Neill Campbell"
+  - name: "Dan Burrows"
+    working: "Kari Heine"
+  - name: "Eric Castillo"
+    working: "Melina Freitag"
+  - name: "Federico Cornalba"
+    working: "Tony Shardlow and J. Zimmer"
+  - name: "Jenny Delos Reyes"
+    working: "Tony Shardlow and J. White"
+  - name: "Teo Deveney"
+    working: "Tony Shardlow"
+  - name: "Joshua Evans"
+    working: "Özgür Şimşek"
+  - name: "David Fernandes"
+    working: "Neill Campbell"
+  - name: "Michele Firmo"
+    working: "Tony Shardlow"
+  - name: "Connr Gascoigne"
+    working: "Theresa Smith"
+  - name: "Arron Gosnell"
+    working: "Evangelos Evangelou"
+  - name: "Elizabeth Gray"
+    working: "Evangelos Evangelou"
+  - name: "Dan Green"
+    working: "Melina Freitag"
+  - name: "Allen Hart"
+    working: "James Hook"
+  - name: "Adam Hartshorne"
+    working: "Neill Campbell"
+  - name: "Matthew Hosier"
+    working: "Tom Fincham Haines"
+  - name: "James Evans"
+    working: "Karim Anaya-Izquierdo"
+  - name: "Nadeen Khaleel"
+    working: "Theresa Smith"
+  - name: "Amelie Klein"
+    working: "Kari Heine"
+  - name: "Malena Sabate Landman"
+    working: "Silvia Gazzola"
+  - name: "Andrew Lawrence"
+    working: "Neill Campbell"
+  - name: "Jan Malte Lichtenberg"
+    working: "Özgür Şimşek"
+  - name: "Alessandro Di Martino"
+    working: "Neill Campbell"
+  - name: "Sebastian Morel-Balbi"
+    working: "Tiago de Paula Peixoto"
+  - name: "Tom Pennington"
+    working: "R. Scheichl and K. Anaya-Izquierdo"
+  - name: "Adwaye Rambojun"
+    working: "Neill Campbell and Tony Shardlow"
+  - name: "Paul Russell"
+    working: "Özgür Şimşek"
+  - name: "Paul Secular"
+    working: "Sergey Dolgov"
+  - name: "Sebastian Stolze"
+    working: "Evangelos Evangelou"
+  - name: "Andreas Theophilou"
+    working: "Özgür Şimşek"
+  - name: "Ed Wong"
+    working: "Tom Fincham Haines"
+  - name: "Lizhi Zhang"
+    working: "Tiago de Paula Peixoto"
