--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Centre for Mathematics and Algorithms for Data at the University of Bath
-brand: "M&thinsp;A&thinsp;D @ Bath"
+brand: "MAD @ Bath"
 email: TODO@bath.ac.uk # mad-centre@bath.ac.uk.fillthisin
 description: >- # this means to ignore newlines until "baseurl:"
   Interdisciplinary Research Centre `Mathematics and Algorithms for Data' 
