add and correct phd students

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -91,14 +91,16 @@ researchers:
     working: "Neill Campbell"
   - name: "Dan Burrows"
     working: "Kari Heine"
-  - name: "Eric Castillo"
-    working: "Melina Freitag"
+  - name: "Eric Baruch Gutiérrez Castillo"
+    working: "Matthias Ehrhardt"
   - name: "Federico Cornalba"
     working: "Tony Shardlow and J. Zimmer"
   - name: "Jenny Delos Reyes"
     working: "Tony Shardlow and J. White"
   - name: "Teo Deveney"
     working: "Tony Shardlow"
+  - name: "Margaret Duff"
+    working: "Neill Campbell and Matthias Ehrhardt"
   - name: "Joshua Evans"
     working: "Özgür Şimşek"
   - name: "David Fernandes"
