--- a/_data/seminars.yml
+++ b/_data/seminars.yml
@@ -1,4 +1,19 @@
 seminars:
+  - title: "Inverse problems with imperfect forward operators"
+    speaker: "Yury Korolev (University of Cambridge)"
+    url: "https://wiki.bath.ac.uk/display/cnmseminar/2019-20+Schedule"
+    date: 13:15 26/11/2019
+    location: "4W 1.07 Wolfson"
+  - title: "How Many Labels Do You Need For Semi-Supervised Learning?"
+    speaker: "Matt Thorpe (University of Manchester)"
+    url: "https://wiki.bath.ac.uk/display/cnmseminar/2019-20+Schedule"
+    date: 13:15 22/10/2019
+    location: "4W 1.07 Wolfson"
+  - title: "Optimization Methods for Inverse Problems from Imaging"
+    speaker: "Ke Chen (University of Liverpool)"
+    url: "https://wiki.bath.ac.uk/display/cnmseminar/2019-20+Schedule"
+    date: 13:15 15/10/2019
+    location: "4W 1.07 Wolfson"
   - title: "Assessing the performance in predicting terrorism in space and time using extreme gradient boosting and geostatistical models"
     speaker: "Andre Python (University of Oxford)"
     url: "https://people.bath.ac.uk/kmph20/seminars.html"
