Updated seminar date format for correct sorting.

--- a/_data/seminars.yml
+++ b/_data/seminars.yml
@@ -2,30 +2,30 @@ seminars:
   - title: "Inverse problems with imperfect forward operators"
     speaker: "Yury Korolev (University of Cambridge)"
     url: "https://wiki.bath.ac.uk/display/cnmseminar/2019-20+Schedule"
-    date: 13:15 26/11/2019
+    date: 2019-11-26 13:15
     location: "4W 1.07 Wolfson"
   - title: "How Many Labels Do You Need For Semi-Supervised Learning?"
     speaker: "Matt Thorpe (University of Manchester)"
     url: "https://wiki.bath.ac.uk/display/cnmseminar/2019-20+Schedule"
-    date: 13:15 22/10/2019
+    date: 2019-10-22 13:15
     location: "4W 1.07 Wolfson"
   - title: "Optimization Methods for Inverse Problems from Imaging"
     speaker: "Ke Chen (University of Liverpool)"
     url: "https://wiki.bath.ac.uk/display/cnmseminar/2019-20+Schedule"
-    date: 13:15 15/10/2019
+    date: 2019-10-15 13:15
     location: "4W 1.07 Wolfson"
   - title: "Assessing the performance in predicting terrorism in space and time using extreme gradient boosting and geostatistical models"
     speaker: "Andre Python (University of Oxford)"
     url: "https://people.bath.ac.uk/kmph20/seminars.html"
-    date: 14:15 26/03/2019
+    date: 2019-03-26 14:15
     location: "CB 3.7"
   - title: "On Spectral Graph Clustering"
     speaker: "Carey E. Priebe (Johns Hopkins)"
     url: "http://people.bath.ac.uk/ma3tcr/cncb_calendar.html"
-    date: 14:15 21/03/2019
+    date: 2019-03-21 14:15
     location: "CB 3.9"
   - title: "Bayesian inversion by deep learning with applications to tomography"
     speaker: "Ozan Oktem (Stockholm)"
     url: "http://people.bath.ac.uk/sg968/NAseminars/naseminar.html"
-    date: 12:15 01/03/2019
+    date: 2019-03-01 12:15
     location: "Wolfson"
