update title yury k

--- a/_data/seminars.yml
+++ b/_data/seminars.yml
@@ -9,7 +9,7 @@ seminars:
     url: "http://people.bath.ac.uk/sg968/NAseminars/naseminar.html"
     date: 2019-10-04 12:15
     location: "4W 1.7 Wolfson"
-  - title: "Inverse problems with imperfect forward operators"
+  - title: "Inverse problems with imperfect forward operators and applications in image deblurring"
     speaker: "Yury Korolev (University of Cambridge)"
     url: "https://wiki.bath.ac.uk/display/cnmseminar/2019-20+Schedule"
     date: 2019-11-26 13:15
